--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-native-chart-nosensezzz": "0.0.1",
     "react-native-modalbox": "^1.2.8",
     "react-native-orientation": "^1.10.0",
-    "react-timer-mixin": "^0.13.3"
+    "react-timer-mixin": "^0.13.3",
+    "rn-geolocation": "0.0.6"
   }
 }
