--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ project.xcworkspace
 #
 node_modules/
 npm-debug.log
+android/local.properties
+android/.gradle/
+android/.idea/
+android/Healthmonitor.iml
+android/app/app.iml
