BLE chart [In progress]

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'Healthmonitor'
 
 include ':app'
+include ':react-native-chart-android'
+project(':react-native-chart-android').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-chart-android/android')
