--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,13 @@ DerivedData
 *.xcuserstate
 project.xcworkspace
 
+# Android/IJ
+#
+.idea
+.gradle
+local.properties
+
 # node.js
 #
 node_modules/
 npm-debug.log
-android/local.properties
-android/.gradle/
-android/.idea/
-android/Healthmonitor.iml
-android/app/app.iml
