--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.12.0",
+    "react-native": "^0.22.2",
+    "react-native-chart": "^0.1.14",
+    "react-native-chart-android": "^1.0.2",
     "react-native-chart-nosensezzz": "0.0.1",
     "react-native-modalbox": "^1.2.8",
     "react-native-orientation": "^1.10.0",
-    "react-timer-mixin": "^0.13.3",
-    "rn-geolocation": "0.0.6"
+    "react-timer-mixin": "^0.13.3"
   }
 }
