--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.12.0",
+    "react-native": "^0.16.0",
     "react-native-chart-nosensezzz": "0.0.1",
+    "react-native-material-design": "^0.3.3",
     "react-native-modalbox": "^1.2.8",
     "react-native-orientation": "^1.10.0",
     "react-timer-mixin": "^0.13.3",
