--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,3 +3,5 @@ rootProject.name = 'Healthmonitor'
 include ':app'
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
+include ':reactdate', ':app'
+project(':reactdate').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-date')
