--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-orientation": "^1.10.0",
     "react-native-picker-android": "^0.3.8",
     "react-native-vector-icons": "^0.8.5",
+    "react-native-ya-navigator": "^0.4.3",
     "react-timer-mixin": "^0.13.3",
     "rn-geolocation": "0.0.6"
   }
